--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,11 @@ rand = "0.8"
 base64 = "0.13.0"
 dirs = "3"
 tabular = "0.1.4"
-glob = "0.3.0"
+shellexpand = "2.1.0"
+globset = "0.4.8"
+globber = "0.1.3"
+lscolors = "0.7.1"
+ansi_term = "0.12.1"
 
 [dev-dependencies]
 tempdir = "0.3"
