--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,8 @@ ansi_term = "0.12.1"
 atty = "0.2.14"
 tabwriter = "1.2.1"
 ignore = "0.4.18"
+globber = "0.1.3"
+regex = "1.5.4"
 
 [dev-dependencies]
 tempdir = "0.3"
