--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ tabwriter = "1.2.1"
 ignore = "0.4.18"
 regex = "1.5.4"
 lazy_static = "1.4.0"
+num_cpus = "1.13.0"
 
 [dev-dependencies]
 tempdir = "0.3"
