--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,6 @@ serde_yaml = "0.8"
 serde_cbor = "0.11"
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
-walkdir = "2"
 colored = { git = "https://github.com/wojciechkepka/colored", branch = "master", features = ["serde"] }
 globwalk = "0.8"
 rand = "0.8"
@@ -39,6 +38,11 @@ ignore = "0.4.18"
 regex = "1.5.4"
 lazy_static = "1.4.0"
 num_cpus = "1.13.0"
+crossbeam-channel = "0.5.1"
+crossbeam-utils = "0.8.5"
+log = "0.4.14"
+env_logger = "0.9.0"
+rayon = "1.5.1"
 
 [dev-dependencies]
 tempdir = "0.3"
