--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ crossbeam-utils = "0.8.5"
 log = "0.4.14"
 env_logger = "0.9.0"
 rayon = "1.5.1"
+fsio = { version = "0.2.0", features = ["temp-path"] }
 
 [dev-dependencies]
 tempdir = "0.3"
