--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "wutag"
 description = "Tag files and manage them with color"
-version = "0.4.6"
+version = "0.4.7"
 authors = ["wojciechkepka <wojtek.kepka@protonmail.com>", "Lucas Burns <lmb@lmburns.com>"]
 edition = "2018"
 repository = "https://github.com/lmburns/wutag"
@@ -17,8 +17,6 @@ path = "wutag_core/lib.rs"
 anyhow = "1"
 libc = "0.2"
 thiserror = "1"
-clap = "3.0.0-beta.2"
-clap_generate = "3.0.0-beta.2"
 serde_yaml = "0.8"
 serde_cbor = "0.11"
 chrono = { version = "0.4", features = ["serde"] }
@@ -32,7 +30,6 @@ globset = "0.4.8"
 lscolors = "0.7.1"
 ansi_term = "0.12.1"
 atty = "0.2.14"
-tabwriter = "1.2.1"
 ignore = "0.4.18"
 regex = "1.5.4"
 lazy_static = "1.4.0"
@@ -43,6 +40,9 @@ log = "0.4.14"
 env_logger = "0.9.0"
 rayon = "1.5.1"
 fsio = { version = "0.2.0", features = ["temp-path"] }
+cli-table = "0.4.6"
+clap = "3.0.0-beta.4"
+clap_generate = "3.0.0-beta.4"
 
 [dev-dependencies]
 tempdir = "0.3"
