Added option to edit tags in `$EDITOR` with new subcommand `view` * So far this, only shows files that are already tagged * Works both globally and locally * Will have an option to show all files in directory very soon * Restructured the entire project because `app.rs` was getting long

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,18 +30,18 @@ repos:
     always_run: true
     entry: cargo clippy
     args: ["--", "-D", "warnings"]
-  # - id: update-completions
-  #   name: update shell completions
-  #   pass_filenames: false
-  #   language: system
-  #   always_run: true
-  #   entry: >
-  #     sh -c '
-  #     cd completions &&
-  #     cargo run -- print-completions --shell zsh > _wutag &&
-  #     cargo run -- print-completions --shell bash > wutag.bash &&
-  #     git add _wutag
-  #     '
+  - id: update-completions
+    name: update shell completions
+    pass_filenames: false
+    language: system
+    always_run: true
+    entry: >
+      sh -c '
+      cd completions &&
+      cargo run -- print-completions --shell zsh > _wutag &&
+      cargo run -- print-completions --shell bash > wutag.bash &&
+      git add _wutag
+      '
   - id: update-manpage
     name: update man page
     pass_filenames: false
