--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,35 +14,37 @@ name = "wutag_core"
 path = "wutag_core/lib.rs"
 
 [dependencies]
-anyhow = "1"
-libc = "0.2"
-thiserror = "1"
-serde_yaml = "0.8"
-serde_cbor = "0.11"
-chrono = { version = "0.4", features = ["serde"] }
-serde = { version = "1", features = ["derive"] }
-colored = { git = "https://github.com/wojciechkepka/colored", branch = "master", features = ["serde"] }
-rand = "0.8"
-base64 = "0.13.0"
-dirs = "3"
-shellexpand = "2.1.0"
-globset = "0.4.8"
-lscolors = "0.7.1"
 ansi_term = "0.12.1"
+anyhow = "1"
 atty = "0.2.14"
-ignore = "0.4.18"
-regex = "1.5.4"
-lazy_static = "1.4.0"
-num_cpus = "1.13.0"
-crossbeam-channel = "0.5.1"
-crossbeam-utils = "0.8.5"
-log = "0.4.14"
-env_logger = "0.9.0"
-rayon = "1.5.1"
-fsio = { version = "0.2.0", features = ["temp-path"] }
-cli-table = "0.4.6"
+base64 = "0.13.0"
+chrono = { version = "0.4", features = ["serde"] }
 clap = "3.0.0-beta.4"
 clap_generate = "3.0.0-beta.4"
+cli-table = "0.4.6"
+colored = { git = "https://github.com/wojciechkepka/colored", branch = "master", features = ["serde"] }
+crossbeam-channel = "0.5.1"
+crossbeam-utils = "0.8.5"
+dirs = "3"
+env_logger = "0.9.0"
+globset = "0.4.8"
+ignore = "0.4.18"
+lazy_static = "1.4.0"
+lexiclean = "0.0.1"
+libc = "0.2"
+log = "0.4.14"
+lscolors = "0.7.1"
+num_cpus = "1.13.0"
+rand = "0.8"
+rayon = "1.5.1"
+regex = "1.5.4"
+serde = { version = "1", features = ["derive"] }
+serde_cbor = "0.11"
+serde_json = "1.0.66"
+serde_yaml = "0.8"
+shellexpand = "2.1.0"
+thiserror = "1"
+toml = "0.5.8"
 
 [dev-dependencies]
 tempdir = "0.3"
