--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,4 +47,10 @@ thiserror = "1.0.26"
 toml = "0.5.8"
 
 [dev-dependencies]
-tempdir = "0.3.7"
+assert_cmd = "1.0.8"
+predicates = "2.0.1"
+wait-timeout = "0.2.0"
+tempfile = "3.2.0"
+serial_test = "0.5.0"
+# tempdir = "0.3.7"
+# gag = "0.1.10"
