stricter clippy lints again

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,12 +29,12 @@ dirs = "3.0.2"
 env_logger = "0.9.0"
 globset = "0.4.8"
 ignore = "0.4.18"
-lazy_static = "1.4.0"
 lexiclean = "0.0.1"
 libc = "0.2.100"
 log = "0.4.14"
 lscolors = "0.7.1"
 num_cpus = "1.13.0"
+once_cell = "1.8.0"
 rand = "0.8.4"
 rayon = "1.5.1"
 regex = "1.5.4"
@@ -47,10 +47,13 @@ thiserror = "1.0.26"
 toml = "0.5.8"
 
 [dev-dependencies]
-assert_cmd = "1.0.8"
 predicates = "2.0.1"
-wait-timeout = "0.2.0"
 tempfile = "3.2.0"
 serial_test = "0.5.0"
+assert_cmd = "2.0.0"
+# wait-timeout = "0.2.0"
 # tempdir = "0.3.7"
 # gag = "0.1.10"
+
+[profile.release]
+lto = true
