--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ clap = "3.0.0-beta.4"
 clap_generate = "3.0.0-beta.4"
 cli-table = "0.4.6"
 colored = { git = "https://github.com/wojciechkepka/colored", branch = "master", features = ["serde"] }
+crossterm = { version = "0.20.0", default-features = false }
 crossbeam-channel = "0.5.1"
 crossbeam-utils = "0.8.5"
 dirs = "3.0.2"
@@ -45,6 +46,14 @@ serde_yaml = "0.8.19"
 shellexpand = "2.1.0"
 thiserror = "1.0.26"
 toml = "0.5.8"
+termion = "1.5.5"
+tui = { version = "0.16.0", features = ["crossterm"] }
+uuid = { version = "0.8.2", features = ["serde", "v4"] }
+rustyline = "9.0.0"
+rustyline-derive = "0.5.0"
+unicode-segmentation = "1.8.0"
+unicode-width = "0.1.9"
+cassowary = "0.3.0"
 
 [dev-dependencies]
 predicates = "2.0.1"
