--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ rustyline-derive = "0.5.0"
 unicode-segmentation = "1.8.0"
 unicode-width = "0.1.9"
 cassowary = "0.3.0"
+better-panic = "0.2.0"
 
 [dev-dependencies]
 predicates = "2.0.1"
