cleaned the README up a little bit; working towards completions in the TUI

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,7 +43,7 @@ repos:
       cargo run -- print-completions --shell elvish > wutag.elvish &&
       cargo run -- print-completions --shell fish > wutag.fish &&
       cargo run -- print-completions --shell powershell > _wutag.ps1 &&
-      git add _wutag wutag.bash wutag.elvish wutag.fish wutag.ps1
+      git add _wutag wutag.bash wutag.elvish wutag.fish _wutag.ps1
       '
   - id: update-manpage
     name: update man page
