--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,14 +66,21 @@ crossbeam-utils = "0.8.5"
 # rayon = "1.5.1"
 
 # Paths and patterns
-globset = "0.4.8"
+wax = { version = "0.3.0", git = "https://github.com/lmburns/wax" }
+globset = "0.4.8" # TODO: Remove
 regex = "1.5.4"
 ignore = "0.4.18"
 lexiclean = "0.0.1"
 
+# Parsing
+nom = "7.1.0"
+nom-supreme = "0.6.0"
+nom_locate = "4.0.0"
+
 # Logging
 env_logger = "0.9.0"
 log = "0.4.14"
+annotate-snippets = "0.9.1"
 
 # System information
 atty = "0.2.14"
@@ -84,8 +91,9 @@ once_cell = "1.8.0"
 # Hashing
 base64 = "0.13.0"
 blake3 = "1.2.0"
-chrono = { version = "0.4.19", features = ["serde"] }
 uuid = { version = "0.8", features = ["v4", "serde"] }
+chrono = { version = "0.4.19", features = ["serde"] }
+humantime = "2.1.0"
 
 # Command-line
 clap = { version = "3.0.0-rc.7", features = ["derive", "default", "cargo", "wrap_help", "env"] }
@@ -134,6 +142,7 @@ predicates = "2.0.1"
 tempfile = "3.2.0"
 serial_test = "0.5.0"
 assert_cmd = "2.0.0"
+expect-test = "1.2.2"
 # wait-timeout = "0.2.0"
 # tempdir = "0.3.7"
 # gag = "0.1.10"
