--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,8 +96,8 @@ chrono = { version = "0.4.19", features = ["serde"] }
 humantime = "2.1.0"
 
 # Command-line
-clap = { version = "3.0.0-rc.7", features = ["derive", "default", "cargo", "wrap_help", "env"] }
-clap_generate = "3.0.0-rc.7"
+clap = { version = "3.0.1", features = ["derive", "default", "cargo", "wrap_help", "env"] }
+clap_complete = "3.0.4"
 
 # Tools
 which = "4.2.2"
@@ -113,9 +113,11 @@ serde_yaml = { version = "0.8.19", optional = true }
 toml = { version = "0.5.8", optional = true }
 serde_json = "1.0.66"
 serde_cbor = "0.11.2" # TODO: Find way not to use this
+serde_rusqlite = "0.29.0" # TODO: USE/DEL
 
 notify-rust = { version = "4.0", default-features = false, features = ["z"] } # TODO: USE/DEL
-rusqlite = { version = "0.26", features = ["bundled", "functions", "chrono", "serde_json", "collation", "uuid"] }
+# TODO: Remove serde_json if not used
+rusqlite = { version = "0.26", features = ["bundled", "functions", "chrono", "serde_json", "collation"] }
 
 # Option: (default) -- Formatting output
 cli-table = { version = "0.4.6", default-features = false, optional = true }
@@ -134,7 +136,6 @@ better-panic = { version = "0.2.0", optional = true }
 gpgme = { version = "0.10.0", optional = true }
 secstr = { version = "0.4.0", optional = true }
 zeroize = { version = "1.4.3", optional = true }
-serde_rusqlite = "0.29.0"
 bytes = "1.1.0"
 
 [dev-dependencies]
