--- a/Cargo.toml
+++ b/Cargo.toml
@@ -112,6 +112,7 @@ rand = "0.8.4"
 itertools = "0.10.1" # TODO: USE/DEL
 indexmap = { version = "1.7.0", features = ["serde-1"] }
 scopeguard = "1.1.0"
+tern = { git = "https://github.com/lmburns/tern" }
 
 # Option: (default = serde_yaml) -- Serialization
 serde = { version = "1.0.129", features = ["derive"] }
