--- a/example/wutag.yml
+++ b/example/wutag.yml
@@ -8,6 +8,9 @@ registry: "$XDG_DATA_HOME/wutag/wutag.XXX"
 follow_symlinks: false
 # Should duplicate file hashes be reported?
 show_duplicates: false
+# Tags will only be added to the database if the file/pattern that is specified
+# when creating the tag actually returns a match, indicating that the file exists
+only_create_tags_if_valid: true
 # Max depth for glob/regex pattern to traverse when matching files
 max_depth: 10
 # File path color
