--- a/Cargo.toml
+++ b/Cargo.toml
@@ -165,7 +165,7 @@ bytes = "1.1.0"
 pathdiff = "0.2.1"
 fancy-regex = "0.10.0"
 # exattr = {version = "0.2.3", package = "xattr"}
-xattr = "0.2.3"
+# xattr = "0.2.3"
 
 [dev-dependencies]
 predicates = "2.1.1"
